--- a/My_Website.html
+++ b/My_Website.html
@@ -28,9 +28,9 @@
             <a href="about:blank">Read More</a>
             <h3>Categories</h3>
             <ul>
-                <li>Category 1</li>
-                <li>Category 2</li>
-                <li>Category 3</li>
+                <li><a href="about:blank">Category 1</a></li>
+                <li><a href="about:blank">Category 2</a></li>
+                <li><a href="about:blank">Category 3</a></li>
             </ul>
         </section>
         <footer>
